Fixed an issue with header wrapping and sizing

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -84,7 +84,7 @@ nav img {
 header div {
 	display: inline-block;
 	font-size: 75px;
-	margin: 80px;
+	margin: 25px 0px;
 	text-align: center;
-	width: 300px;
+	width: 400px;
 }
